--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="icon" href="./favicon.png" />
   <title>Exos-Heroes Birthday</title>
 
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   <link rel="stylesheet" href="./main.css" />
   <script defer src="./main.js"></script>
 </head>
@@ -19,8 +23,14 @@
 
   <section class="calendar">
     <div class="year-month">
+      <div class="material-icons prev-month"><span class="material-symbols-outlined">
+        chevron_left
+        </span></div>
       <div class="year"></div>
       <div class="month"></div>
+      <div class="material-icons next-month"><span class="material-symbols-outlined">
+        navigate_next
+        </span></div>
     </div>
     <table class="calendar-body" >
       <thead>
