--- a/index.html
+++ b/index.html
@@ -34,19 +34,22 @@
     </div>
     <table class="calendar-body" >
       <thead>
-        <tr>
+        <tr class="week">
           <td>월</td>
           <td>화</td>
           <td>수</td>
           <td>목</td>
           <td>금</td>
-          <td>토</td>
-          <td>일</td>
+          <td style="color:royalblue">토</td>
+          <td style="color:orangered">일</td>
         </tr>
       </thead>   
     <tbody class="calendar-date">
+      <div class="tooltip-content">
+      </div>
     </tbody>
     </table>
+    
   </section>
   
 </body>
