can't drag, add hero info until April

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <script defer src="./main.js"></script>
 </head>
 <body>
-  <head>
+  <header>
     <h1> Exos Heroes Birthday </h1>
-  </head>  
+  </header>  
   <!-- 원하는 캐릭터의 생일을 알려줍니다. (검색)-->
   <!-- 캐릭터의 생일을 표시한 달력을 보여줍니다. -->
 
