--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <h1> Exos Heroes Birthday </h1>
+    <h1> <a href="." class="home"> Exos Heroes Birthday </a> </h1>
   </header>  
   <!-- 원하는 캐릭터의 생일을 알려줍니다. (검색)-->
   <!-- 캐릭터의 생일을 표시한 달력을 보여줍니다. -->
@@ -49,8 +49,12 @@
       </div>
     </tbody>
     </table>
-    
   </section>
+
+  <footer>
+    잘못된 정보 혹은 문제 발생 시, twitter @GHOKAN34 로 연락부탁드립니다. <br>
+    생일 정보 출처 : 알란드리아님
+  </footer>
   
 </body>
 </html>
