--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
   <link rel="stylesheet" href="./main.css" />
   <script defer src="./main.js"></script>
 </head>
@@ -20,7 +21,7 @@
   </header>  
   <!-- 원하는 캐릭터의 생일을 알려줍니다. (검색)-->
   <!-- 캐릭터의 생일을 표시한 달력을 보여줍니다. -->
-
+  
   <section class="calendar">
     <div class="year-month">
       <div class="material-icons prev-month"><span class="material-symbols-outlined">
