--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
   <link rel="stylesheet" href="./main.css" />
+  <!-- <script defer src="./search.js"></script> -->
   <script defer src="./main.js"></script>
-  <script defer src="./search.js"></script>
 </head>
 <body>
   <header>
