--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
-  <link rel="stylesheet" href="./main.css" />
+  <link rel="stylesheet" href="./main.scss" />
   <!-- <script defer src="./search.js"></script> -->
   <script defer src="./main.js"></script>
 </head>
