add element image

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
     </table>
   </section>
 
+  <div class="element">
+    <img id="machine" src="./img/machine.png" alt="machine" />
+    <img id="nature" src="./img/nature.png" alt="nature" />
+    <img id="light" src="./img/light.png" alt="light" />
+    <img id="fire" src="./img/fire.png" alt="fire" />
+    <img id="frost" src="./img/frost.png" alt="frost" />
+    <img id="dark" src="./img/dark.png" alt="dark" />
+  </div>
+
   <footer>
     잘못된 정보 혹은 문제 발생 시, twitter @GHOKAN34 로 연락부탁드립니다. <br>
     생일 정보 출처 : 알란드리아님
