make a result list

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div class="search-input">
         <input type="text" placeholder="영웅의 이름을 입력하세요." />
     </div>
+    <div class="search-list">
+    </div>
     <div class="search-result"></div>
   </section>
 
