--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <input type="text" placeholder="영웅의 이름을 입력하세요." />
     </div>
     <div class="search-list">
+      <div class="list">
+      </div>
     </div>
     <div class="search-result"></div>
   </section>
